--- a/index.html
+++ b/index.html
@@ -627,6 +627,12 @@ Completed training in AI-assisted development, automation workflows, and data to
 Covered Python with AI tools, SQL, Power BI, AI-powered web/app development, and automation platforms.<br><br>
 <a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf">View Certificate</a>
 </div>
+ <div class="card">
+<strong>Google Analytics Certificate</strong><br><br>
+Earned the Google Analytics Certification from Google, demonstrating proficiency in GA4, event tracking, conversion measurement, and attribution models.<br>
+Skilled in analyzing user behavior data, generating actionable insights, and optimizing digital performance using industry-standard analytics tools.<br><br>
+<a class="btn" href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/GA4_Certificate.pdf">View Certificate</a>
+</div>
 </section>
 
 <section id="contact">
